# Superstore-Sales-Project

./: .env  Makefile  README.md  pyproject.toml  requirements.txt
data/processed/: superstore_cleaned.csv  superstore_cleaned.rar
documentation/: data_dictionary.md
python/notebooks/: main.ipynb
python/scripts/: dashboard.py  load_to_postgres.py  main.py  notebook.py  read_env.py
sql/: analysis_queries.sql  copy_data.sql  create_table.sql  dim_customers.sql  dim_geography.sql  dim_products.sql  null_values.sql  query.sql  query_views.sql  row_counts.sql  sqlCopy.txt
visualizations/: Superstore Sales.pbix
