[project]
name = "superstore-sales-project"
version = "0.1.0"
description = "A comprehensive data analysis project for analyzing Superstore sales data with interactive visualizations, reports, and dashboards.
"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "shiny>=1.5.0",
    "ydata-profiling[notebook,unicode]>=4.17.0",
]
